<resources>
    <string name="continue_button">Продолжить</string>
    <string name="phone_input_hint">Номер телефона</string>
    <string name="phone_input_prefix">+7</string>
    <string name="or">или</string>
    <string name="code_input_hint">ID визитки</string>

    <string name="main_balance">%1$d ₽</string>
    <string name="main_balance_title">Сумма чаевых</string>

    <string name="link_edit_payment_page_goal_title">Цель</string>
    <string name="link_edit_payment_page_name_subtitle">Получит ваши чаевые</string>
    <string name="link_edit_payment_page_goal_current_title">Осталось</string>
    <string name="link_edit_payment_page_set_price_hint">Введите сумму</string>
    <string name="link_edit_payment_page_set_price">От %1$d ₽ до %2$d ₽</string>
    <string name="link_edit_sender_info_name_field_title">Имя</string>
    <string name="link_edit_sender_info_email_field_title">E-mail</string>
    <string name="link_edit_sender_info_phone_field_title">Телефон</string>
    <string name="link_edit_sender_info_comment_field_title">Комментарий</string>
    <string name="link_edit_sender_info_city_field_title">Город</string>
    <string name="link_edit_payment_page_do_you_like">Как вам \"%1$s\"\?</string>
    <string name="link_edit_payment_page_tips_info_title">Оплатить комиссию</string>
    <string name="link_edit_payment_page_tips_info_subtitle">Спишем сумму чаевых и комиссию сервиса — %1$s ₽</string>
    <string name="link_edit_payment_page_bank_button">Карта</string>
    <string name="tips_field_name">Имя и фамилия</string>
    <string name="tips_field_email">Электронная почта</string>
    <string name="tips_field_phone">Телефон</string>
    <string name="tips_field_city">Город</string>
    <string name="tips_field_comment">Комментарий</string>
    <string name="tips_field_email_hint">На нее придет письмо после перевода чаевых</string>
    <string name="bubble_text">+%1$d ₽</string>
    <string name="link_edit_payment_page_info_text">Согласен с %1$s</string>
    <string name="link_edit_payment_page_info_text_subs">условиями</string>
    <string name="link_edit_payment_page_captcha_text">This site is protected by reCAPTCHA and the Google\n%1$s and %2$s apply</string>
    <string name="link_edit_payment_page_captcha_text_subs_privacy">Privacy Policy</string>
    <string name="link_edit_payment_page_captcha_text_subs_terms">Terms of Service</string>
    <string name="card_fragment_sum_text">Сумма %1$s ₽</string>
    <string name="card_fragment_hint_card_number">Номер карты</string>
    <string name="card_fragment_hint_card_date">Дата</string>
    <string name="card_fragment_hint_card_cvc">CVC-код</string>
    <string name="card_fragment_info_label">Данные карты защищены</string>
    <string name="pay_button">Оплатить</string>
    <string name="fragment_payment_success_subtitle">Радуется вашим чаевым</string>
    <string name="fragment_payment_success_main_button">Отправить еще чаевые</string>
    <string name="fragment_payment_failure_subtitle">Не получилось оплатить</string>
    <string name="fragment_payment_failure_main_button">Попробовать еще раз</string>
    <string name="field_required">Поле обязательно</string>
    <string name="field_invalid">Некорректный формат</string>
    <string name="card_fragment_error_wrong_card_number">Некорректный номер</string>
    <string name="card_fragment_error_wrong_card_cvc">Некорректный код</string>
    <string name="fragment_payment_error_title">Что-то пошло не так</string>
    <string name="fragment_payment_error_subtitle">Попробуйте позже</string>
    <string name="fragment_payment_error_main_button">Понятно</string>
    <string name="field_amount_incorrect">Некорректная сумма</string>
</resources>