<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header_layout"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/header_close_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:padding="16dp"
            android:src="@drawable/ic_close_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <FrameLayout
        android:id="@+id/avatar_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:padding="36dp"
        app:layout_constraintTop_toBottomOf="@+id/header_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/avatar_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_unavailable_service" />

    </FrameLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title_textview"
        style="@style/RegularText.16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="35dp"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/fragment_payment_error_title"
        app:layout_constraintTop_toBottomOf="@+id/avatar_layout" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/subtitle_textview"
        style="@style/RegularText.Light.14"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="35dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/fragment_payment_error_subtitle"
        app:layout_constraintTop_toBottomOf="@+id/title_textview" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/main_button"
        style="@style/ButtonMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="35dp"
        android:layout_marginTop="68dp"
        android:text="@string/fragment_payment_error_main_button"
        app:layout_constraintTop_toBottomOf="@+id/subtitle_textview" />

</androidx.constraintlayout.widget.ConstraintLayout>