<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header_layout"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/logo_view"
            android:layout_width="129dp"
            android:layout_height="28dp"
            android:foregroundGravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_pf_logo" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/header_close_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:padding="16dp"
            android:src="@drawable/ic_close_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <FrameLayout
        android:id="@+id/background_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="204dp"
        android:paddingBottom="90dp"
        app:layout_constraintTop_toBottomOf="@id/header_layout">

        <FrameLayout
            android:id="@+id/background_image_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/background_image_view"
                android:layout_width="match_parent"
                android:layout_height="240dp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_gravity="bottom"
                android:scaleType="fitXY"
                android:src="@drawable/fragment_payment_background_gradient" />
        </FrameLayout>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/avatar_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintBottom_toBottomOf="@+id/background_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/avatar_view"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_margin="5dp"
            app:srcCompat="@drawable/ic_empty_avatar" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            app:srcCompat="@drawable/ic_avatar_like" />

    </FrameLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title_textview"
        style="@style/BoldText.20"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="35dp"
        android:layout_marginTop="32dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/avatar_layout"
        tools:text="NAME" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/subtitle_textview"
        style="@style/RegularText.16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="35dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/fragment_payment_success_subtitle"
        app:layout_constraintTop_toBottomOf="@+id/title_textview" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/main_button"
        style="@style/ButtonMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="35dp"
        android:layout_marginTop="38dp"
        android:text="@string/fragment_payment_success_main_button"
        app:layout_constraintTop_toBottomOf="@+id/subtitle_textview" />

    <androidx.appcompat.widget.LinearLayoutCompat
        app:layout_constraintTop_toBottomOf="@id/main_button"
        android:id="@+id/price_goal_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginHorizontal="16dp"
        android:orientation="vertical">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/MediumText.16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="4dp"
                android:text="@string/link_edit_payment_page_goal_title" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/goal_target_view"
                style="@style/MediumText.16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/main_balance" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <ProgressBar
            android:id="@+id/goal_progressbar_view"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:layout_marginTop="8dp"
            android:max="100"
            android:progressDrawable="@drawable/header_progressbar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/RegularText.13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="4dp"
                android:text="@string/link_edit_payment_page_goal_current_title" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/goal_current_view"
                style="@style/RegularText.13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/main_balance" />
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.constraintlayout.widget.ConstraintLayout>